E1-1084 Teaser_pattern_spacing issue on title

--- a/ui.frontend/src/main/webpack/etisalat/styles/core-components/teaser/_cross-promo.scss
+++ b/ui.frontend/src/main/webpack/etisalat/styles/core-components/teaser/_cross-promo.scss
@@ -690,12 +690,12 @@
 
   &.teaser--pattern__bg {
     .cmp-teaser {
-      align-items: flex-end;
+      align-items: center;
       display: flex;
       flex-direction: column-reverse;
 
       @include respond-to-min($tablet) {
-        align-items: flex-end;
+        align-items: center;
         flex-direction: row-reverse;
       }
 
@@ -721,27 +721,18 @@
       }
 
       &__title {
-        margin-top: 50px;
-
         @include respond-to-max($tablet) {
           font-size: $font26;
         }
       }
 
       &__content {
-        padding-top: 0;
-
-        @include respond-to-min($tablet) {
-          padding-bottom: 9rem;
-          width: 70%;
-        }
+        padding-bottom: 2rem;
+        padding-top: 2rem;
 
         @include respond-to-min($desktop) {
-          padding-bottom: 7rem;
-        }
-
-        @include respond-to-min($desktop-wide) {
-          padding-bottom: 12rem;
+          padding-bottom: 4rem;
+          padding-top: 2rem;
         }
       }
 
